--- a/index.html
+++ b/index.html
@@ -5,8 +5,107 @@
     <title>HTML Academy: Нёрдс</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>
-
+    <header class="main-header">
+      <div class="nerds-logo">
+        <img alt="Nerds logo" src="http://placehold.it/150x100">
+      </div>
+      <div class="container">
+        <nav class="main-navigation">
+          <ul>
+            <li><a href="#">Студия</a></li>
+            <li><a href="#">Клиенты</a></li>
+            <li><a href="#">Магазин</a></li>
+            <li><a href="#">Контакты</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="basket-block">
+        <img alt="Корзина" src="http://placehold.it/10x10">
+        <a class="basket" href="#">Корзина</a>
+      </div>
+      <div class="first-block">
+        <h2>Долго, дорого, срупулезно.</h2>
+        <p>Математически выверенный дизайн
+        для вашего сайта или мобильного приложения.</p>
+        <a class="btn" href="#">Узнать больше</a>
+      </div>
+      <img alt="Фото гаджетов" src="http://placehold.it/300x200">
+    </header>
+    <main>
+      <div class="main-first-block">
+        <div class="first-left">
+          <img alt="Веб-сайты" src="http://placehold.it/200x100">
+          <h3>Веб-сайты</h3>
+          <p>Мир никогда не будет прежним
+             после того как увидит ваш сайт!</p>
+          <a class="btn" href="#">Заказать</a>
+        </div>
+        <div class="first-center">
+          <img alt="Приложения" src="http://placehold.it/200x100">
+          <h3>Приложения</h3>
+          <p>Покорите топ-10 приложений в
+             AppStore и Google Play</p>
+          <a class="btn" href="#">Заказать</a>
+        </div>
+        <div class="first-right">
+          <img alt="Призентации" src="http://placehold.it/200x100">
+          <h3>Призентации</h3>
+          <p>Вы даже не подозреваете,
+             насколько вы изумительны!</p>
+          <a class="btn" href="#">Заказать</a>
+        </div>
+      </div>
+      <div class="main-second-block">
+        <div class="second-left">
+          <h1>Мы - маленькая, но гордая
+              дизай-студия из Краснодара</h1>
+          <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет
+             превыше креатива. Работаем не покладая рук, как роботы.</p>
+          <h4>Выполняем заказы на разработку:</h4>
+          <ul>
+            <li>Веб-сайтов любой сложности</li>
+            <li>Мобильных приложений для OS и Android</li>
+            <li>Слайдшоу и видео для корпоративных презентаций</li>
+          </ul>
+        </div>
+        <div class="second-right">
+          <img alt="Nerds logo" src="http://placehold.it/250x150">
+          <h4>С 2004 года любим точность во всем:</h4>
+          <p><span class="percent">146%</span> Уровень самоотдачи</p>
+          <p><span class="percent">100%</span> Соблюдение сроков</p>
+          <p><span class="percent">50%</span> Минимальная предоплата</p>
+        </div>
+      </div>
+      <div class="friends">
+        <a class="friends-btn btn-academy" href="https://htmlacademy.ru">html academy</a>
+        <a class="friends-btn btn-borodinski" href="#">Barbershop Borodinski</a>
+        <a class="friends-btn btn-pink" href="#">Pink</a>
+        <a class="friends-btn btn-mishka" href="#">Mishka</a>
+      </div>
+    </main>
+    <footer class="main-footer">
+      <div class="map">
+        <img alt="Карта" src="http://placehold.it/600x200">
+        <div class="adress">
+          <h4>Nёrds design studio</h4>
+          191186, Санкт-Петербург,<br>
+          ул. Б. Конюшенная, д. 19/8<br>
+          <br>
+          тел. +7(812) 275-75-75
+          <a class="btn" href="#">Напишите нам</a>
+        </div>
+      </div>
+      <div class="container">
+        <div class="social">
+          <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
+          <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
+          <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+        </div>
+        <div class="friendship">
+          <p><span class="social-header">Давайте дружить, это выгодно!</span>
+            Скидка 10% для друзей из социальных сетей</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
