--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       </div>
       <div class="first-block">
         <h2>Долго, дорого, срупулезно.</h2>
-        <p>Математически выверенный дизайн
-        для вашего сайта или мобильного приложения.</p>
+          Математически выверенный дизайн
+          для вашего сайта или мобильного приложения.
         <a class="btn" href="#">Узнать больше</a>
       </div>
       <img alt="Фото гаджетов" src="http://placehold.it/300x200">
@@ -36,31 +36,30 @@
         <div class="first-left">
           <img alt="Веб-сайты" src="http://placehold.it/200x100">
           <h3>Веб-сайты</h3>
-          <p>Мир никогда не будет прежним
-             после того как увидит ваш сайт!</p>
+            Мир никогда не будет прежним
+            после того как увидит ваш сайт!
           <a class="btn" href="#">Заказать</a>
         </div>
         <div class="first-center">
           <img alt="Приложения" src="http://placehold.it/200x100">
           <h3>Приложения</h3>
-          <p>Покорите топ-10 приложений в
-             AppStore и Google Play</p>
+            Покорите топ-10 приложений в
+            AppStore и Google Play
           <a class="btn" href="#">Заказать</a>
         </div>
         <div class="first-right">
           <img alt="Призентации" src="http://placehold.it/200x100">
           <h3>Призентации</h3>
-          <p>Вы даже не подозреваете,
-             насколько вы изумительны!</p>
+            Вы даже не подозреваете,
+            насколько вы изумительны!
           <a class="btn" href="#">Заказать</a>
         </div>
       </div>
       <div class="main-second-block">
         <div class="second-left">
-          <h1>Мы - маленькая, но гордая
-              дизай-студия из Краснодара</h1>
-          <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет
-             превыше креатива. Работаем не покладая рук, как роботы.</p>
+          <h1>Мы - маленькая, но гордая дизай-студия из Краснодара</h1>
+            Исповедуем принципы минимализма и чистоты. Ставим математический расчет
+            превыше креатива. Работаем не покладая рук, как роботы.
           <h4>Выполняем заказы на разработку:</h4>
           <ul>
             <li>Веб-сайтов любой сложности</li>
@@ -102,8 +101,8 @@
           <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
         </div>
         <div class="friendship">
-          <p><span class="social-header">Давайте дружить, это выгодно!</span>
-            Скидка 10% для друзей из социальных сетей</p>
+          <span class="social-header">Давайте дружить, это выгодно!</span>
+            Скидка 10% для друзей из социальных сетей
         </div>
       </div>
     </footer>
