--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <header class="main-header">
       <div class="nerds-logo">
-        <img alt="Nerds logo" src="http://placehold.it/150x100">
+        <a><img alt="Nerds logo" src="http://placehold.it/150x100"></a>
       </div>
       <div class="container">
         <nav class="main-navigation">
@@ -20,34 +20,49 @@
         </nav>
       </div>
       <div class="basket-block">
-        <img alt="Корзина" src="http://placehold.it/10x10">
         <a class="basket" href="#">Корзина</a>
       </div>
-      <div class="first-block">
-        <h2>Долго, дорого, срупулезно.</h2>
-          Математически выверенный дизайн
-          для вашего сайта или мобильного приложения.
-        <a class="btn" href="#">Узнать больше</a>
+      <div class="slider">
+        <div class="slide slide-1">
+          <b>Долго, дорого, срупулезно.</b>
+          <p>Математически выверенный дизайн
+             для вашего сайта или мобильного приложения.</p>
+          <a class="btn" href="#">Узнать больше</a>
+          <img alt="Фото гаджетов" src="http://placehold.it/300x200">
+        </div>
+        <div class="slide slide-2">
+          <b>Любим математику как никто другой</b>
+          <p>Никакого креатива, только математические формулы
+             для расчета идеальных пропорций</p>
+          <a class="btn" href="#">Узнать больше</a>
+          <img alt="Фото гаджетов" src="http://placehold.it/300x200">
+        </div>
+        <div class="slide slide-3">
+          <b>Только ночь, только хардкор</b>
+          <p>Никакого круатива, только математические формулы
+             для расчета идеальных пропорций</p>
+          <a class="btn" href="#">Узнать больше</a>
+          <img alt="Фото гаджетов" src="http://placehold.it/300x200">
+        </div>
       </div>
-      <img alt="Фото гаджетов" src="http://placehold.it/300x200">
     </header>
     <main>
-      <div class="main-first-block">
-        <div class="first-left">
+      <div class="main-features">
+        <div class="feature feature-1">
           <img alt="Веб-сайты" src="http://placehold.it/200x100">
           <h3>Веб-сайты</h3>
             Мир никогда не будет прежним
             после того как увидит ваш сайт!
           <a class="btn" href="#">Заказать</a>
         </div>
-        <div class="first-center">
+        <div class="feature feature-2">
           <img alt="Приложения" src="http://placehold.it/200x100">
           <h3>Приложения</h3>
             Покорите топ-10 приложений в
             AppStore и Google Play
           <a class="btn" href="#">Заказать</a>
         </div>
-        <div class="first-right">
+        <div class="feature feature-3">
           <img alt="Призентации" src="http://placehold.it/200x100">
           <h3>Призентации</h3>
             Вы даже не подозреваете,
@@ -55,42 +70,44 @@
           <a class="btn" href="#">Заказать</a>
         </div>
       </div>
-      <div class="main-second-block">
-        <div class="second-left">
-          <h1>Мы - маленькая, но гордая дизай-студия из Краснодара</h1>
-            Исповедуем принципы минимализма и чистоты. Ставим математический расчет
-            превыше креатива. Работаем не покладая рук, как роботы.
-          <h4>Выполняем заказы на разработку:</h4>
+      <div class="main-about">
+        <div class="main-about-left">
+          <b>Мы - маленькая, но гордая дизай-студия из Краснодара</b>
+            <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет
+               превыше креатива. Работаем не покладая рук, как роботы.
+            </p>
+          <b>Выполняем заказы на разработку:</b>
           <ul>
             <li>Веб-сайтов любой сложности</li>
             <li>Мобильных приложений для OS и Android</li>
             <li>Слайдшоу и видео для корпоративных презентаций</li>
           </ul>
         </div>
-        <div class="second-right">
+        <div class="main-about-right">
           <img alt="Nerds logo" src="http://placehold.it/250x150">
-          <h4>С 2004 года любим точность во всем:</h4>
+          <b>С 2004 года любим точность во всем:</b>
           <p><span class="percent">146%</span> Уровень самоотдачи</p>
           <p><span class="percent">100%</span> Соблюдение сроков</p>
           <p><span class="percent">50%</span> Минимальная предоплата</p>
         </div>
       </div>
-      <div class="friends">
-        <a class="friends-btn btn-academy" href="https://htmlacademy.ru">html academy</a>
-        <a class="friends-btn btn-borodinski" href="#">Barbershop Borodinski</a>
-        <a class="friends-btn btn-pink" href="#">Pink</a>
-        <a class="friends-btn btn-mishka" href="#">Mishka</a>
+      <div class="portfolio">
+        <a class="portfolio-item btn-academy" href="https://htmlacademy.ru"><img alt="HTML academy" src="http://placehold.it/100x100"></a>
+        <a class="portfolio-item btn-borodinski" href="#"><img alt="Barbershop Borodinski" src="http://placehold.it/100x100"></a>
+        <a class="portfolio-item btn-pink" href="#"><img alt="Pink" src="http://placehold.it/100x100"></a>
+        <a class="portfolio-item btn-mishka" href="#"><img alt="Mishka" src="http://placehold.it/100x100"></a>
       </div>
     </main>
     <footer class="main-footer">
       <div class="map">
         <img alt="Карта" src="http://placehold.it/600x200">
-        <div class="adress">
+        <div class="address">
           <h4>Nёrds design studio</h4>
-          191186, Санкт-Петербург,<br>
-          ул. Б. Конюшенная, д. 19/8<br>
-          <br>
-          тел. +7(812) 275-75-75
+          <p>191186, Санкт-Петербург,<br>
+             ул. Б. Конюшенная, д. 19/8<br>
+             <br>
+             тел. +7(812) 275-75-75
+          </p>
           <a class="btn" href="#">Напишите нам</a>
         </div>
       </div>
@@ -104,6 +121,15 @@
           <span class="social-header">Давайте дружить, это выгодно!</span>
             Скидка 10% для друзей из социальных сетей
         </div>
+        <form class="hiden-form" action="/echo" method="post">
+          <h2>Напишите нам</h2>
+          <label for="name-field">Ваше имя:</label>
+          <input type="text" name="name" id="name-field" placeholder="Представьтесь, пожалуйста">
+          <label for="mail-field">Ваш e-mail:</label>
+          <input type="text" name="mail" id="mail-field" placeholder="Для отправки ответа">
+          <label for="comment-field">Текст письма</label>
+          <textarea name="comment" id="comment-field" placeholder="В свободной форме"></textarea>
+        </form>
       </div>
     </footer>
   </body>
