--- a/catalog.html
+++ b/catalog.html
@@ -2,12 +2,13 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <link href="css/style.css" rel="stylesheet">
     <title>HTML Academy: Нёрдс</title>
   </head>
   <body>
     <header class="shop-header">
       <div class="nerds-logo">
-        <a href="index.html"><img alt="Nerds logo" src="http://placehold.it/150x100"></a>
+        <a href="index.html"><img alt="Nerds logo" src="img/nerds-logo.png" width="161" height="65"></a>
       </div>
       <div class="container">
         <nav class="main-navigation">
@@ -20,7 +21,6 @@
         </nav>
       </div>
       <div class="basket-block">
-        <img alt="Корзина" src="http://placehold.it/10x10">
         <a class="basket" href="#">Корзина</a>
       </div>
       <h1>Магазин готовых шаблонов</h1>
@@ -45,11 +45,11 @@
         <fieldset class="form-features">
           <legend>Особенности:</legend>
           <ul>
-            <li><input name="navigation" type="checkbox" checked>Слайдер</li>
-            <li><input name="navigation" type="checkbox">Блок преимуществ</li>
-            <li><input name="navigation" type="checkbox" checked>Новости</li>
-            <li><input name="navigation" type="checkbox">Галерея</li>
-            <li><input name="navigation" type="checkbox">Корзина</li>
+            <li><input name="navigation" type="checkbox" id="slider" checked><label for="slider">Слайдер</label></li>
+            <li><input name="navigation" type="checkbox" id="block"><label for="block">Блок преимуществ</label></li>
+            <li><input name="navigation" type="checkbox" id="news" checked><label for="news">Новости</label></li>
+            <li><input name="navigation" type="checkbox" id="galery"><label for="galery">Галерея</label></li>
+            <li><input name="navigation" type="checkbox" id="car"><label for="car">Корзина</label></li>
           </ul>
         </fieldset>
         <button class="btn" type="submit">Показать</button>
@@ -65,15 +65,15 @@
         </ul>
       </div>
       <article class="sedona">
-        <a class="main-img" href="#"><img alt="Sedona" src="http://placehold.it/200x200"></a>
+        <a class="main-img" href="#"><img alt="Sedona" src="img/img-sedona.jpg" width="360" height="576"></a>
         <div class="price-box">
-          <h3><a href="">Sedona</a></h3>
+          <h3><a href="#">Sedona</a></h3>
           Информационный сайт для туристов
           <a class="btn" href="#">9 900 руб.</a>
         </div>
       </article>
       <article class="borodinsky">
-        <a class="main-img" href="#"><img alt="Барбершоп Бородинки" src="http://placehold.it/200x400"></a>
+        <a class="main-img" href="#"><img alt="Барбершоп Бородинки" src="img/img-barbershop.jpg" width="360" height="576"></a>
         <div class="price-box">
           <h3><a href="#">Barbershop</a></h3>
           Сайт солона кросоты. Для мужчин, да.
@@ -81,7 +81,7 @@
         </div>
       </article>
       <article class="a-plus">
-        <a class="main-img" href="#"><img alt="A plus" src="http://placehold.it/200x400"></a>
+        <a class="main-img" href="#"><img alt="A plus" src="img/img-aplus.jpg" width="360" height="576"></a>
         <div class="price-box">
           <h3><a href="#">A plus</a></h3>
           Лендинг курсов повышения квалификации
@@ -89,7 +89,7 @@
         </div>
       </article>
       <article class="pink">
-        <a class="main-img" href="#"><img alt="Мобильные приложения PINK" src="http://placehold.it/200x400"></a>
+        <a class="main-img" href="#"><img alt="Мобильные приложения PINK" src="img/img-pink.jpg" width="360" height="576"></a>
         <div class="price-box">
           <h3><a href="#">Pink App</a></h3>
           Продуктовый лендинг приложения для IOS и Android
@@ -97,7 +97,7 @@
         </div>
       </article>
       <article class="mishka">
-        <a class="main-img" href="#"><img alt="Интернет-магазин MISHKA" src="http://placehold.it/200x400"></a>
+        <a class="main-img" href="#"><img alt="Интернет-магазин MISHKA" src="img/img-mishka.jpg" width="360" height="576"></a>
         <div class="price-box">
           <h3><a href="#">Mishka</a></h3>
           Интернет-магазин вязальных игрушек
@@ -105,7 +105,7 @@
         </div>
       </article>
       <article class="kvast">
-        <a class="main-img" href="#"><img alt="Самый крафтовый квас" src="http://placehold.it/200x400"></a>
+        <a class="main-img" href="#"><img alt="Самый крафтовый квас" src="img/img-kvast.jpg" width="360" height="576"></a>
         <div class="price-box">
           <h3><a href="#">Кваст</a></h3>
           Промо-сайт производителя крафтового кваса
@@ -121,8 +121,8 @@
     </main>
     <footer class="main-footer">
       <div class="map">
-        <img alt="Карта" src="http://placehold.it/600x200">
-        <div class="adress">
+        <img alt="Карта" src="img/map-marker.jpg" width="1440" height="416">
+        <div class="address">
           <h4>Nёrds design studio</h4>
           <p>191186, Санкт-Петербург,<br>
              ул. Б. Конюшенная, д. 19/8<br>
@@ -142,14 +142,15 @@
           <span class="social-header">Давайте дружить, это выгодно!</span>
             Скидка 10% для друзей из социальных сетей
         </div>
-        <form class="hiden-form" action="/echo" method="post">
-          <h2>Напишите нам</h2>
+        <form class="hidden-form" action="/echo" method="post">
+          <b>Напишите нам</b>
           <label for="name-field">Ваше имя:</label>
           <input type="text" name="name" id="name-field" placeholder="Представьтесь, пожалуйста">
           <label for="mail-field">Ваш e-mail:</label>
           <input type="text" name="mail" id="mail-field" placeholder="Для отправки ответа">
           <label for="comment-field">Текст письма</label>
           <textarea name="comment" id="comment-field" placeholder="В свободной форме"></textarea>
+          <button type="button" class="close">X</button>
         </form>
       </div>
     </footer>
