--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <link href="css/style.css" rel="stylesheet">
     <title>HTML Academy: Нёрдс</title>
   </head>
   <body>
     <header class="main-header">
       <div class="nerds-logo">
-        <a><img alt="Nerds logo" src="http://placehold.it/150x100"></a>
+        <a><img alt="Nerds logo" src="img/nerds-logo.png" width="161" height="65"></a>
       </div>
       <div class="container">
         <nav class="main-navigation">
@@ -28,43 +29,43 @@
           <p>Математически выверенный дизайн
              для вашего сайта или мобильного приложения.</p>
           <a class="btn" href="#">Узнать больше</a>
-          <img alt="Фото гаджетов" src="http://placehold.it/300x200">
+          <img alt="Фото гаджетов" src="img/slider-1.png" width="760" height="431">
         </div>
         <div class="slide slide-2">
           <b>Любим математику как никто другой</b>
           <p>Никакого креатива, только математические формулы
              для расчета идеальных пропорций</p>
           <a class="btn" href="#">Узнать больше</a>
-          <img alt="Фото гаджетов" src="http://placehold.it/300x200">
+          <img alt="Фото гаджетов" src="img/slider-2.png" width="760" height="431">
         </div>
         <div class="slide slide-3">
           <b>Только ночь, только хардкор</b>
-          <p>Никакого круатива, только математические формулы
-             для расчета идеальных пропорций</p>
+          <p>Работать днем, как все? Мы против этого.
+             Ближе к полуночи работа только начинается.</p>
           <a class="btn" href="#">Узнать больше</a>
-          <img alt="Фото гаджетов" src="http://placehold.it/300x200">
+          <img alt="Фото гаджетов" src="img/slider-3.png" width="760" height="431">
         </div>
       </div>
     </header>
     <main>
       <div class="main-features">
         <div class="feature feature-1">
-          <img alt="Веб-сайты" src="http://placehold.it/200x100">
+          <img alt="Веб-сайты" src="img/illustration-1.jpg" width="300" height="146">
           <h3>Веб-сайты</h3>
             Мир никогда не будет прежним
             после того как увидит ваш сайт!
           <a class="btn" href="#">Заказать</a>
         </div>
         <div class="feature feature-2">
-          <img alt="Приложения" src="http://placehold.it/200x100">
+          <img alt="Приложения" src="img/illustration-2.jpg" width="300" height="146">
           <h3>Приложения</h3>
             Покорите топ-10 приложений в
             AppStore и Google Play
           <a class="btn" href="#">Заказать</a>
         </div>
         <div class="feature feature-3">
-          <img alt="Призентации" src="http://placehold.it/200x100">
-          <h3>Призентации</h3>
+          <img alt="Презентации" src="img/illustration-3.jpg" width="300" height="146">
+          <h3>Презентации</h3>
             Вы даже не подозреваете,
             насколько вы изумительны!
           <a class="btn" href="#">Заказать</a>
@@ -72,7 +73,7 @@
       </div>
       <div class="main-about">
         <div class="main-about-left">
-          <b>Мы - маленькая, но гордая дизай-студия из Краснодара</b>
+          <b>Мы - маленькая, но гордая дизайн-студия из Краснодара</b>
             <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет
                превыше креатива. Работаем не покладая рук, как роботы.
             </p>
@@ -84,7 +85,7 @@
           </ul>
         </div>
         <div class="main-about-right">
-          <img alt="Nerds logo" src="http://placehold.it/250x150">
+          <img alt="Nerds logo" src="img/nerds-illustration.png" width="360" height="208">
           <b>С 2004 года любим точность во всем:</b>
           <p><span class="percent">146%</span> Уровень самоотдачи</p>
           <p><span class="percent">100%</span> Соблюдение сроков</p>
@@ -92,15 +93,23 @@
         </div>
       </div>
       <div class="portfolio">
-        <a class="portfolio-item btn-academy" href="https://htmlacademy.ru"><img alt="HTML academy" src="http://placehold.it/100x100"></a>
-        <a class="portfolio-item btn-borodinski" href="#"><img alt="Barbershop Borodinski" src="http://placehold.it/100x100"></a>
-        <a class="portfolio-item btn-pink" href="#"><img alt="Pink" src="http://placehold.it/100x100"></a>
-        <a class="portfolio-item btn-mishka" href="#"><img alt="Mishka" src="http://placehold.it/100x100"></a>
+        <a class="portfolio-item btn-academy" href="https://htmlacademy.ru">
+          <img alt="HTML academy" src="img/logo-1.png" width="199" height="68">
+        </a>
+        <a class="portfolio-item btn-borodinski" href="#">
+          <img alt="Barbershop Borodinski" src="img/logo-2.png" width="209" height="87">
+        </a>
+        <a class="portfolio-item btn-pink" href="#">
+          <img alt="Pink" src="img/logo-3.png" width="185" height="52">
+        </a>
+        <a class="portfolio-item btn-mishka" href="#">
+          <img alt="Mishka" src="img/logo-4.png" width="173" height="84">
+        </a>
       </div>
     </main>
     <footer class="main-footer">
       <div class="map">
-        <img alt="Карта" src="http://placehold.it/600x200">
+        <img alt="Карта" src="img/map-marker.jpg" width="1440" height="416">
         <div class="address">
           <h4>Nёrds design studio</h4>
           <p>191186, Санкт-Петербург,<br>
@@ -121,14 +130,15 @@
           <span class="social-header">Давайте дружить, это выгодно!</span>
             Скидка 10% для друзей из социальных сетей
         </div>
-        <form class="hiden-form" action="/echo" method="post">
-          <h2>Напишите нам</h2>
+        <form class="hidden-form" action="/echo" method="post">
+          <b>Напишите нам</b>
           <label for="name-field">Ваше имя:</label>
           <input type="text" name="name" id="name-field" placeholder="Представьтесь, пожалуйста">
           <label for="mail-field">Ваш e-mail:</label>
           <input type="text" name="mail" id="mail-field" placeholder="Для отправки ответа">
           <label for="comment-field">Текст письма</label>
           <textarea name="comment" id="comment-field" placeholder="В свободной форме"></textarea>
+          <button type="button" class="close">X</button>
         </form>
       </div>
     </footer>
