--- a/catalog.html
+++ b/catalog.html
@@ -2,16 +2,17 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/normalize.css">
     <link href="css/style.css" rel="stylesheet">
     <title>HTML Academy: Нёрдс</title>
   </head>
   <body>
-    <header class="shop-header">
-      <div class="nerds-logo">
-        <a href="index.html"><img alt="Nerds logo" src="img/nerds-logo.png" width="161" height="65"></a>
-      </div>
-      <div class="container">
-        <nav class="main-navigation">
+    <header class="catalog-header">
+      <div class="menu container clearfix">
+        <div class="nerds-logo">
+          <a href="index.html"><img alt="Nerds logo" src="img/nerds-logo.png" width="161" height="65"></a>
+        </div>
+        <nav class="main-menu">
           <ul>
             <li><a href="#">Студия</a></li>
             <li><a href="#">Клиенты</a></li>
@@ -19,44 +20,49 @@
             <li><a href="#">Контакты</a></li>
           </ul>
         </nav>
+        <div class="basket">
+          <a class="basket" href="#">Корзина</a>
+        </div>
       </div>
-      <div class="basket-block">
-        <a class="basket" href="#">Корзина</a>
+      <div class="leader container clearfix">
+        <h1>Магазин готовых шаблонов</h1>
       </div>
-      <h1>Магазин готовых шаблонов</h1>
     </header>
     <main>
-      <form action="/echo" method="post">
-        <fieldset class="form-cost">
-          <legend>Cтоимость:</legend>
-          <ul>
-            <li><input type="range" min="0" max="15000"></li>
-            <li>От<input type="number" placeholder="0">До<input type="number" placeholder="15000"></li>
-          </ul>
-        </fieldset>
-        <fieldset class="form-grid">
-          <legend>Сетка:</legend>
-          <ul>
-            <li><input name="grd" type="radio" value="adaptive" checked>Адаптивная</li>
-            <li><input name="grd" type="radio" value="fixed">Фиксированная</li>
-            <li><input name="grd" type="radio" value="rubber">Резиновая</li>
-          </ul>
-        </fieldset>
-        <fieldset class="form-features">
-          <legend>Особенности:</legend>
-          <ul>
-            <li><input name="navigation" type="checkbox" id="slider" checked><label for="slider">Слайдер</label></li>
-            <li><input name="navigation" type="checkbox" id="block"><label for="block">Блок преимуществ</label></li>
-            <li><input name="navigation" type="checkbox" id="news" checked><label for="news">Новости</label></li>
-            <li><input name="navigation" type="checkbox" id="galery"><label for="galery">Галерея</label></li>
-            <li><input name="navigation" type="checkbox" id="car"><label for="car">Корзина</label></li>
-          </ul>
-        </fieldset>
-        <button class="btn" type="submit">Показать</button>
-      </form>
-      <div class="main-sort">
-        <span>Сортировать</span>
+<div class="container clearfix">
+      <div class="action-form">
+        <form action="/echo" method="post">
+          <fieldset class="form-cost">
+            <legend>Cтоимость:</legend>
+            <ul>
+              <li><input type="range" min="0" max="15000"></li>
+              <li>От<input type="number" placeholder="0">До<input type="number" placeholder="15000"></li>
+            </ul>
+          </fieldset>
+          <fieldset class="form-grid">
+            <legend>Сетка:</legend>
+            <ul>
+              <li><input name="grd" type="radio" value="adaptive" checked>Адаптивная</li>
+              <li><input name="grd" type="radio" value="fixed">Фиксированная</li>
+              <li><input name="grd" type="radio" value="rubber">Резиновая</li>
+            </ul>
+          </fieldset>
+          <fieldset class="form-features">
+            <legend>Особенности:</legend>
+            <ul>
+              <li><input name="navigation" type="checkbox" id="slider" checked><label for="slider">Слайдер</label></li>
+              <li><input name="navigation" type="checkbox" id="block"><label for="block">Блок преимуществ</label></li>
+              <li><input name="navigation" type="checkbox" id="news" checked><label for="news">Новости</label></li>
+              <li><input name="navigation" type="checkbox" id="galery"><label for="galery">Галерея</label></li>
+              <li><input name="navigation" type="checkbox" id="car"><label for="car">Корзина</label></li>
+            </ul>
+          </fieldset>
+          <button class="btn" type="submit">Показать</button>
+        </form>
+      </div>
+      <div class="main-filter">
         <ul>
+          <li><span>Сортировать:</span></li>
           <li><a class="sort-btn" href="#">По цене</a></li>
           <li><a class="sort-btn" href="#">По типу</a></li>
           <li><a class="sort-btn" href="#">По названию</a></li>
@@ -64,75 +70,79 @@
           <li><a class="sort-btn" href="#">Вверх</a></li>
         </ul>
       </div>
-      <article class="sedona">
-        <a class="main-img" href="#"><img alt="Sedona" src="img/img-sedona.jpg" width="360" height="576"></a>
-        <div class="price-box">
-          <h3><a href="#">Sedona</a></h3>
-          Информационный сайт для туристов
-          <a class="btn" href="#">9 900 руб.</a>
+      <div class="cards clearfix">
+        <article class="sedona">
+          <a class="main-img" href="#"><img alt="Sedona" src="img/img-sedona.jpg" width="360" height="576"></a>
+          <div class="price-box">
+            <h3><a href="#">Sedona</a></h3>
+            Информационный сайт для туристов
+            <a class="btn" href="#">9 900 руб.</a>
+          </div>
+        </article>
+        <article class="pink">
+          <a class="main-img" href="#"><img alt="Мобильные приложения PINK" src="img/img-pink.jpg" width="360" height="576"></a>
+          <div class="price-box">
+            <h3><a href="#">Pink App</a></h3>
+            Продуктовый лендинг приложения для IOS и Android
+            <a class="btn" href="#">9 900 руб.</a>
+          </div>
+        </article>
+        <article class="borodinsky">
+          <a class="main-img" href="#"><img alt="Барбершоп Бородинки" src="img/img-barbershop.jpg" width="360" height="576"></a>
+          <div class="price-box">
+            <h3><a href="#">Barbershop</a></h3>
+            Сайт солона кросоты. Для мужчин, да.
+            <a class="btn" href="#">9 900 руб.</a>
+          </div>
+        </article>
+        <article class="mishka">
+          <a class="main-img" href="#"><img alt="Интернет-магазин MISHKA" src="img/img-mishka.jpg" width="360" height="576"></a>
+          <div class="price-box">
+            <h3><a href="#">Mishka</a></h3>
+            Интернет-магазин вязальных игрушек
+            <a class="btn" href="#">9 900 руб.</a>
+          </div>
+        </article>
+        <article class="a-plus">
+          <a class="main-img" href="#"><img alt="A plus" src="img/img-aplus.jpg" width="360" height="576"></a>
+          <div class="price-box">
+            <h3><a href="#">A plus</a></h3>
+            Лендинг курсов повышения квалификации
+            <a class="btn" href="#">9 900 руб.</a>
+          </div>
+        </article>
+        <article class="kvast">
+          <a class="main-img" href="#"><img alt="Самый крафтовый квас" src="img/img-kvast.jpg" width="360" height="576"></a>
+          <div class="price-box">
+            <h3><a href="#">Кваст</a></h3>
+            Промо-сайт производителя крафтового кваса
+            <a class="btn" href="#">9 900 руб.</a>
+          </div>
+        </article>
+        <div class="pages-of-shop">
+          <a class="btn">1</a>
+          <a class="btn" href="#">2</a>
+          <a class="btn" href="#">3</a>
+          <a class="btn" href="#">Слейдущая</a>
         </div>
-      </article>
-      <article class="borodinsky">
-        <a class="main-img" href="#"><img alt="Барбершоп Бородинки" src="img/img-barbershop.jpg" width="360" height="576"></a>
-        <div class="price-box">
-          <h3><a href="#">Barbershop</a></h3>
-          Сайт солона кросоты. Для мужчин, да.
-          <a class="btn" href="#">9 900 руб.</a>
-        </div>
-      </article>
-      <article class="a-plus">
-        <a class="main-img" href="#"><img alt="A plus" src="img/img-aplus.jpg" width="360" height="576"></a>
-        <div class="price-box">
-          <h3><a href="#">A plus</a></h3>
-          Лендинг курсов повышения квалификации
-          <a class="btn" href="#">9 900 руб.</a>
-        </div>
-      </article>
-      <article class="pink">
-        <a class="main-img" href="#"><img alt="Мобильные приложения PINK" src="img/img-pink.jpg" width="360" height="576"></a>
-        <div class="price-box">
-          <h3><a href="#">Pink App</a></h3>
-          Продуктовый лендинг приложения для IOS и Android
-          <a class="btn" href="#">9 900 руб.</a>
-        </div>
-      </article>
-      <article class="mishka">
-        <a class="main-img" href="#"><img alt="Интернет-магазин MISHKA" src="img/img-mishka.jpg" width="360" height="576"></a>
-        <div class="price-box">
-          <h3><a href="#">Mishka</a></h3>
-          Интернет-магазин вязальных игрушек
-          <a class="btn" href="#">9 900 руб.</a>
-        </div>
-      </article>
-      <article class="kvast">
-        <a class="main-img" href="#"><img alt="Самый крафтовый квас" src="img/img-kvast.jpg" width="360" height="576"></a>
-        <div class="price-box">
-          <h3><a href="#">Кваст</a></h3>
-          Промо-сайт производителя крафтового кваса
-          <a class="btn" href="#">9 900 руб.</a>
-        </div>
-      </article>
-      <div class="pages-of-shop">
-        <a class="btn">1</a>
-        <a class="btn" href="#">2</a>
-        <a class="btn" href="#">3</a>
-        <a class="btn" href="#">Слейдущая</a>
       </div>
+</div>
     </main>
     <footer class="main-footer">
       <div class="map">
-        <img alt="Карта" src="img/map-marker.jpg" width="1440" height="416">
-        <div class="address">
-          <h4>Nёrds design studio</h4>
-          <p>191186, Санкт-Петербург,<br>
-             ул. Б. Конюшенная, д. 19/8<br>
-             <br>
-             тел. +7(812) 275-75-75
-          </p>
-          <a class="btn" href="#">Напишите нам</a>
+        <div class="container clearfix">
+          <div class="container address">
+            <h4>Nёrds design studio</h4>
+            <p>191186, Санкт-Петербург,<br>
+               ул. Б. Конюшенная, д. 19/8<br>
+               <br>
+               тел. +7(812) 275-75-75
+            </p>
+            <a class="btn" href="#">Напишите нам</a>
+          </div>
         </div>
       </div>
-      <div class="container">
+      <div class="container clearfix">
         <div class="social">
           <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
           <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
