--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/normalize.css">
     <link href="css/style.css" rel="stylesheet">
     <title>HTML Academy: Нёрдс</title>
   </head>
   <body>
-    <header class="main-header">
-      <div class="nerds-logo">
-        <a><img alt="Nerds logo" src="img/nerds-logo.png" width="161" height="65"></a>
-      </div>
-      <div class="container">
-        <nav class="main-navigation">
+    <header class="shop-header">
+      <div class="menu container clearfix">
+        <div class="nerds-logo">
+          <a><img alt="Nerds logo" src="img/nerds-logo.png" width="161" height="65"></a>
+        </div>
+        <nav class="main-menu">
           <ul>
             <li><a href="#">Студия</a></li>
             <li><a href="#">Клиенты</a></li>
@@ -19,36 +20,44 @@
             <li><a href="#">Контакты</a></li>
           </ul>
         </nav>
-      </div>
-      <div class="basket-block">
-        <a class="basket" href="#">Корзина</a>
-      </div>
-      <div class="slider">
-        <div class="slide slide-1">
-          <b>Долго, дорого, срупулезно.</b>
-          <p>Математически выверенный дизайн
-             для вашего сайта или мобильного приложения.</p>
-          <a class="btn" href="#">Узнать больше</a>
-          <img alt="Фото гаджетов" src="img/slider-1.png" width="760" height="431">
+        <div class="basket">
+          <a href="#">Корзина</a>
         </div>
-        <div class="slide slide-2">
-          <b>Любим математику как никто другой</b>
-          <p>Никакого креатива, только математические формулы
-             для расчета идеальных пропорций</p>
-          <a class="btn" href="#">Узнать больше</a>
-          <img alt="Фото гаджетов" src="img/slider-2.png" width="760" height="431">
-        </div>
-        <div class="slide slide-3">
-          <b>Только ночь, только хардкор</b>
-          <p>Работать днем, как все? Мы против этого.
-             Ближе к полуночи работа только начинается.</p>
-          <a class="btn" href="#">Узнать больше</a>
-          <img alt="Фото гаджетов" src="img/slider-3.png" width="760" height="431">
+      </div>
+      <div class="container clearfix">
+        <div class="slider">
+          <div class="slide slide-1">
+            <div class="slide-description">
+              <b>Долго, дорого, срупулезно.</b>
+              <p>Математически выверенный дизайн
+                 для вашего сайта или мобильного приложения.</p>
+              <a class="btn" href="#">Узнать больше</a>
+            </div>
+            <img alt="Фото гаджетов" src="img/slider-1.png" width="760" height="431">
+          </div>
+          <div class="slide slide-2">
+            <div class="slide-description">
+              <b>Любим математику как никто другой</b>
+              <p>Никакого креатива, только математические формулы
+                 для расчета идеальных пропорций</p>
+              <a class="btn" href="#">Узнать больше</a>
+            </div>
+            <img alt="Фото гаджетов" src="img/slider-2.png" width="760" height="431">
+          </div>
+          <div class="slide slide-3">
+            <div class="slide-description">
+              <b>Только ночь, только хардкор</b>
+              <p>Работать днем, как все? Мы против этого.
+                 Ближе к полуночи работа только начинается.</p>
+              <a class="btn" href="#">Узнать больше</a>
+            </div>
+            <img alt="Фото гаджетов" src="img/slider-3.png" width="760" height="431">
+          </div>
         </div>
       </div>
     </header>
     <main>
-      <div class="main-features">
+      <div class="main-features container clearfix">
         <div class="feature feature-1">
           <img alt="Веб-сайты" src="img/illustration-1.jpg" width="300" height="146">
           <h3>Веб-сайты</h3>
@@ -71,7 +80,7 @@
           <a class="btn" href="#">Заказать</a>
         </div>
       </div>
-      <div class="main-about">
+      <div class="main-about container clearfix">
         <div class="main-about-left">
           <b>Мы - маленькая, но гордая дизайн-студия из Краснодара</b>
             <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет
@@ -92,35 +101,36 @@
           <p><span class="percent">50%</span> Минимальная предоплата</p>
         </div>
       </div>
-      <div class="portfolio">
-        <a class="portfolio-item btn-academy" href="https://htmlacademy.ru">
+      <div class="portfolio container clearfix">
+        <a class="btn-academy" href="https://htmlacademy.ru">
           <img alt="HTML academy" src="img/logo-1.png" width="199" height="68">
         </a>
-        <a class="portfolio-item btn-borodinski" href="#">
+        <a class="btn-borodinski" href="#">
           <img alt="Barbershop Borodinski" src="img/logo-2.png" width="209" height="87">
         </a>
-        <a class="portfolio-item btn-pink" href="#">
+        <a class="btn-pink" href="#">
           <img alt="Pink" src="img/logo-3.png" width="185" height="52">
         </a>
-        <a class="portfolio-item btn-mishka" href="#">
+        <a class="btn-mishka" href="#">
           <img alt="Mishka" src="img/logo-4.png" width="173" height="84">
         </a>
       </div>
     </main>
     <footer class="main-footer">
       <div class="map">
-        <img alt="Карта" src="img/map-marker.jpg" width="1440" height="416">
-        <div class="address">
-          <h4>Nёrds design studio</h4>
-          <p>191186, Санкт-Петербург,<br>
-             ул. Б. Конюшенная, д. 19/8<br>
-             <br>
-             тел. +7(812) 275-75-75
-          </p>
-          <a class="btn" href="#">Напишите нам</a>
+        <div class="container clearfix">
+          <div class="container address">
+            <h4>Nёrds design studio</h4>
+            <p>191186, Санкт-Петербург,<br>
+               ул. Б. Конюшенная, д. 19/8<br>
+               <br>
+               тел. +7(812) 275-75-75
+            </p>
+            <a class="btn" href="#">Напишите нам</a>
+          </div>
         </div>
       </div>
-      <div class="container">
+      <div class="container clearfix">
         <div class="social">
           <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
           <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
