--- a/index.html
+++ b/index.html
@@ -26,32 +26,51 @@
       </div>
       <div class="container clearfix">
         <div class="slider">
-          <div class="slide slide-1">
-            <div class="slide-description">
-              <b>Долго, дорого, срупулезно.</b>
-              <p>Математически выверенный дизайн
-                 для вашего сайта или мобильного приложения.</p>
-              <a class="btn" href="#">Узнать больше</a>
+          <input type="radio" id="btn-1" name="toggle" checked>
+          <input type="radio" id="btn-2" name="toggle">
+          <input type="radio" id="btn-3" name="toggle">
+          <div class="slider-inner">
+            <div class="slider-slides">
+              <div class="slides slide-1">
+                <div class="slide-description">
+                  <b>Долго, дорого, срупулезно.</b>
+                  <p>Математически выверенный дизайн
+                     для вашего сайта или мобильного приложения.</p>
+                  <a class="btn" href="#">Узнать больше</a>
+                </div>
+                <div class="slider-controls">
+                  <label for="btn-1"></label>
+                  <label for="btn-2"></label>
+                  <label for="btn-3"></label>
+                </div>
+              </div>
+              <div class="slides slide-2">
+                <div class="slide-description">
+                  <b>Любим математику как никто другой</b>
+                  <p>Никакого креатива, только математические формулы
+                     для расчета идеальных пропорций</p>
+                  <a class="btn" href="#">Узнать больше</a>
+                </div>
+                <div class="slider-controls">
+                  <label for="btn-1"></label>
+                  <label for="btn-2"></label>
+                  <label for="btn-3"></label>
+                </div>
+              </div>
+              <div class="slides slide-3">
+                <div class="slide-description">
+                  <b>Только ночь, только хардкор</b>
+                  <p>Работать днем, как все? Мы против этого.
+                     Ближе к полуночи работа только начинается.</p>
+                  <a class="btn" href="#">Узнать больше</a>
+                </div>
+                <div class="slider-controls">
+                  <label for="btn-1"></label>
+                  <label for="btn-2"></label>
+                  <label for="btn-3"></label>
+                </div>
+              </div>
             </div>
-            <img alt="Фото гаджетов" src="img/slider-1.png" width="760" height="431">
-          </div>
-          <div class="slide slide-2">
-            <div class="slide-description">
-              <b>Любим математику как никто другой</b>
-              <p>Никакого креатива, только математические формулы
-                 для расчета идеальных пропорций</p>
-              <a class="btn" href="#">Узнать больше</a>
-            </div>
-            <img alt="Фото гаджетов" src="img/slider-2.png" width="760" height="431">
-          </div>
-          <div class="slide slide-3">
-            <div class="slide-description">
-              <b>Только ночь, только хардкор</b>
-              <p>Работать днем, как все? Мы против этого.
-                 Ближе к полуночи работа только начинается.</p>
-              <a class="btn" href="#">Узнать больше</a>
-            </div>
-            <img alt="Фото гаджетов" src="img/slider-3.png" width="760" height="431">
           </div>
         </div>
       </div>
