Кнопки для карточек в каталоге

--- a/catalog.html
+++ b/catalog.html
@@ -29,7 +29,7 @@
       </div>
     </header>
     <main>
-<div class="container clearfix">
+    <div class="container clearfix">
       <div class="action-form">
         <form action="/echo" method="post">
           <fieldset class="form-cost">
@@ -72,7 +72,12 @@
       </div>
       <div class="cards clearfix">
         <article class="sedona">
-          <a class="main-img" href="#"><img alt="Sedona" src="img/img-sedona.jpg" width="360" height="576"></a>
+          <div class="cards-controls">
+            <label></label>
+            <label></label>
+            <label></label>
+          </div>
+          <img alt="Sedona" src="img/img-sedona.jpg" width="360" height="576">
           <div class="price-box">
             <h3><a href="#">Sedona</a></h3>
             Информационный сайт для туристов
@@ -80,6 +85,11 @@
           </div>
         </article>
         <article class="pink">
+          <div class="cards-controls">
+            <label></label>
+            <label></label>
+            <label></label>
+          </div>
           <a class="main-img" href="#"><img alt="Мобильные приложения PINK" src="img/img-pink.jpg" width="360" height="576"></a>
           <div class="price-box">
             <h3><a href="#">Pink App</a></h3>
@@ -88,6 +98,11 @@
           </div>
         </article>
         <article class="borodinsky">
+          <div class="cards-controls">
+            <label></label>
+            <label></label>
+            <label></label>
+          </div>
           <a class="main-img" href="#"><img alt="Барбершоп Бородинки" src="img/img-barbershop.jpg" width="360" height="576"></a>
           <div class="price-box">
             <h3><a href="#">Barbershop</a></h3>
@@ -96,6 +111,11 @@
           </div>
         </article>
         <article class="mishka">
+          <div class="cards-controls">
+            <label></label>
+            <label></label>
+            <label></label>
+          </div>
           <a class="main-img" href="#"><img alt="Интернет-магазин MISHKA" src="img/img-mishka.jpg" width="360" height="576"></a>
           <div class="price-box">
             <h3><a href="#">Mishka</a></h3>
@@ -104,6 +124,11 @@
           </div>
         </article>
         <article class="a-plus">
+          <div class="cards-controls">
+            <label></label>
+            <label></label>
+            <label></label>
+          </div>
           <a class="main-img" href="#"><img alt="A plus" src="img/img-aplus.jpg" width="360" height="576"></a>
           <div class="price-box">
             <h3><a href="#">A plus</a></h3>
@@ -112,6 +137,11 @@
           </div>
         </article>
         <article class="kvast">
+          <div class="cards-controls">
+            <label></label>
+            <label></label>
+            <label></label>
+          </div>
           <a class="main-img" href="#"><img alt="Самый крафтовый квас" src="img/img-kvast.jpg" width="360" height="576"></a>
           <div class="price-box">
             <h3><a href="#">Кваст</a></h3>
@@ -126,9 +156,9 @@
           <a class="btn" href="#">Слейдущая</a>
         </div>
       </div>
-</div>
+    </div>
     </main>
-    <footer class="main-footer">
+    <footer class="catalog-footer">
       <div class="map">
         <div class="container clearfix">
           <div class="container address">
