--- a/catalog.html
+++ b/catalog.html
@@ -17,7 +17,7 @@
           <ul>
             <li><a href="#">Студия</a></li>
             <li><a href="#">Клиенты</a></li>
-            <li><a>Магазин</a></li>
+            <li class="active-menu"><a>Магазин</a></li>
             <li><a href="#">Контакты</a></li>
           </ul>
         </nav>
@@ -33,29 +33,75 @@
     <div class="container clearfix">
       <div class="action-form">
         <form action="/echo" method="post">
-          <fieldset class="form-cost">
-            <legend>Cтоимость:</legend>
-            <ul>
-              <li><input type="range" min="0" max="15000"></li>
-              <li>От<input type="number" placeholder="0">До<input type="number" placeholder="15000"></li>
-            </ul>
+          <fieldset class="range-filter">
+            <legend>Стоимость:</legend>
+            <div class="range-controls">
+              <div class="scale">
+                <div class="bar"></div>
+              </div>
+              <div class="toggle toggle-min"></div>
+              <div class="toggle toggle-max"></div>
+            </div>
+            <div class="price-controls">
+              <label class="min-price">от <input name="min-price" type="text" value="0"></label>
+              <label class="max-price">до <input name="max-price" type="text" value="15 000"></label>
+            </div>
           </fieldset>
           <fieldset class="form-grid">
             <legend>Сетка:</legend>
             <ul>
-              <li><input name="grd" type="radio" value="adaptive" checked>Адаптивная</li>
-              <li><input name="grd" type="radio" value="fixed">Фиксированная</li>
-              <li><input name="grd" type="radio" value="rubber">Резиновая</li>
+              <li>
+                <input name="grd" type="radio" value="adaptive" id="btn-1" checked>
+                <label for="btn-1">Адаптивная</label>
+              </li>
+              <li>
+                <input name="grd" type="radio" value="fixed" id="btn-2">
+                <label for="btn-2">Фиксированная</label>
+              </li>
+              <li>
+                <input name="grd" type="radio" value="rubber" id="btn-3">
+                <label for="btn-3">Резиновая</label>
+              </li>
             </ul>
           </fieldset>
           <fieldset class="form-features">
             <legend>Особенности:</legend>
             <ul>
-              <li><input name="navigation" type="checkbox" id="slider" checked><label for="slider">Слайдер</label></li>
-              <li><input name="navigation" type="checkbox" id="block"><label for="block">Блок преимуществ</label></li>
-              <li><input name="navigation" type="checkbox" id="news" checked><label for="news">Новости</label></li>
-              <li><input name="navigation" type="checkbox" id="galery"><label for="galery">Галерея</label></li>
-              <li><input name="navigation" type="checkbox" id="car"><label for="car">Корзина</label></li>
+              <li>
+                <label class="nerds-checkbox" for="slider">
+                  <input name="navigation" type="checkbox" id="slider" checked>
+                  <span class="checkbox-indicator"></span>
+                  Слайдер
+                </label>
+              </li>
+              <li>
+                <label class="nerds-checkbox" for="block">
+                  <input name="navigation" type="checkbox" id="block">
+                  <span class="checkbox-indicator"></span>
+                  Блок преимуществ
+                </label>
+              </li>
+              <li>
+                <label class="nerds-checkbox" for="news">
+                  <input name="navigation" type="checkbox" id="news" checked>
+                  <span class="checkbox-indicator"></span>
+                  Новости
+                </label>
+              </li>
+              <li>
+                <label class="nerds-checkbox" for="galery">
+                  <input name="navigation" type="checkbox" id="galery">
+                  <span class="checkbox-indicator"></span>
+                  Галерея
+                </label>
+              </li>
+              <li>
+                <label class="nerds-checkbox" for="car">
+                  <input name="navigation" type="checkbox" id="car">
+                  <span class="checkbox-indicator"></span>
+                  Корзина
+                </label>
+              </li>
             </ul>
           </fieldset>
           <button class="btn" type="submit">Показать</button>
@@ -64,8 +110,8 @@
       <div class="main-filter clearfix">
         <span>Сортировать:</span>
         <div class="arrows">
-          <a class="arrows down-arrow" href="#">Вверх</a>
-          <a class="arrows up-arrow srt-active" href="#">Вниз</a>
+          <a class="arrows up-arrow" href="#">Вверх</a>
+          <a class="arrows down-arrow srt-active" href="#">Вниз</a>
         </div>
         <ul>
           <li><a class="sort-btn srt-active" href="#">По цене</a></li>
@@ -75,12 +121,9 @@
       </div>
       <div class="shop-cards clearfix">
         <article class="sedona">
-          <!-- <div class="cards-controls">
-            <label></label>
-            <label></label>
-            <label></label>
-          </div> -->
-          <img alt="Sedona" src="img/img-sedona.jpg" width="360" height="576">
+          <a href="#">
+            <img alt="Sedona" src="img/img-sedona.jpg" width="360" height="576">
+          </a>
           <div class="price-box">
             <a href="#">Sedona</a>
             <p>Информационный сайт для туристов</p>
@@ -88,12 +131,9 @@
           </div>
         </article>
         <article class="pink">
-          <!-- <div class="cards-controls">
-            <label></label>
-            <label></label>
-            <label></label>
-          </div> -->
-          <a class="main-img" href="#"><img alt="Мобильные приложения PINK" src="img/img-pink.jpg" width="360" height="576"></a>
+          <a href="#">
+            <img alt="Мобильные приложения PINK" src="img/img-pink.jpg" width="360" height="576">
+          </a>
           <div class="price-box">
             <a href="#">Pink App</a>
             <p>Продуктовый лендинг приложения для IOS и Android</p>
@@ -101,12 +141,9 @@
           </div>
         </article>
         <article class="borodinsky">
-          <!-- <div class="cards-controls">
-            <label></label>
-            <label></label>
-            <label></label>
-          </div> -->
-          <a class="main-img" href="#"><img alt="Барбершоп Бородинки" src="img/img-barbershop.jpg" width="360" height="576"></a>
+          <a href="#">
+            <img alt="Барбершоп Бородинки" src="img/img-barbershop.jpg" width="360" height="576">
+          </a>
           <div class="price-box">
             <a href="#">Barbershop</a>
             <p>Сайт солона кросоты. Для мужчин, да.</p>
@@ -114,12 +151,9 @@
           </div>
         </article>
         <article class="mishka">
-          <!-- <div class="cards-controls">
-            <label></label>
-            <label></label>
-            <label></label>
-          </div> -->
-          <a class="main-img" href="#"><img alt="Интернет-магазин MISHKA" src="img/img-mishka.jpg" width="360" height="576"></a>
+          <a href="#">
+            <img alt="Интернет-магазин MISHKA" src="img/img-mishka.jpg" width="360" height="576">
+          </a>
           <div class="price-box">
             <a href="#">Mishka</a>
             <p>Интернет-магазин вязальных игрушек</p>
@@ -127,12 +161,9 @@
           </div>
         </article>
         <article class="a-plus">
-          <!-- <div class="cards-controls">
-            <label></label>
-            <label></label>
-            <label></label>
-          </div> -->
-          <a class="main-img" href="#"><img alt="A plus" src="img/img-aplus.jpg" width="360" height="576"></a>
+          <a href="#">
+            <img alt="A plus" src="img/img-aplus.jpg" width="360" height="576">
+          </a>
           <div class="price-box">
             <a href="#">A plus</a>
             <p>Лендинг курсов повышения квалификации</p>
@@ -140,12 +171,9 @@
           </div>
         </article>
         <article class="kvast">
-          <!-- <div class="cards-controls">
-            <label></label>
-            <label></label>
-            <label></label>
-          </div> -->
-          <a class="main-img" href="#"><img alt="Самый крафтовый квас" src="img/img-kvast.jpg" width="360" height="576"></a>
+          <a href="#">
+            <img alt="Самый крафтовый квас" src="img/img-kvast.jpg" width="360" height="576">
+          </a>
           <div class="price-box">
             <a href="#">Кваст</a>
             <p>Промо-сайт производителя крафтового кваса</p>
@@ -174,6 +202,19 @@
             <a class="btn" href="#">Напишите нам</a>
           </div>
         </div>
+        <div class="hidden-form">
+          <b>Напишите нам</b>
+          <button class="hidden-form-close" type="button">X</button>
+          <form action="/echo" method="post">
+            <label for="name-field">Ваше имя:</label>
+            <label for="mail-field">Ваш e-mail:</label>
+            <input class="your-name" type="text" name="name" id="name-field" placeholder="Представьтесь, пожалуйста">
+            <input class="your-mail" type="text" name="mail" id="mail-field" placeholder="Для отправки ответа">
+            <label for="comment-field">Текст письма</label>
+            <textarea name="comment" id="comment-field" placeholder="В свободной форме"></textarea>
+          </form>
+          <button class="btn" type="button">Отправить</button>
+        </div>
       </div>
       <div class="container clearfix">
         <div class="social">
@@ -185,16 +226,6 @@
           <b class="social-header">Давайте дружить, это выгодно!</b>
           <p>Скидка 10% для друзей из социальных сетей</p>
         </div>
-        <form class="hidden-form" action="/echo" method="post">
-          <b>Напишите нам</b>
-          <label for="name-field">Ваше имя:</label>
-          <input type="text" name="name" id="name-field" placeholder="Представьтесь, пожалуйста">
-          <label for="mail-field">Ваш e-mail:</label>
-          <input type="text" name="mail" id="mail-field" placeholder="Для отправки ответа">
-          <label for="comment-field">Текст письма</label>
-          <textarea name="comment" id="comment-field" placeholder="В свободной форме"></textarea>
-          <button type="button" class="close">X</button>
-        </form>
       </div>
     </footer>
   </body>
