--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <label for="mail-field">Ваш e-mail:</label>
             <input class="your-name" type="text" name="name" id="name-field" placeholder="Представьтесь, пожалуйста">
             <input class="your-mail" type="text" name="mail" id="mail-field" placeholder="Для отправки ответа">
-            <label for="comment-field">Текст письма</label>
+            <label for="comment-field">Текст письма:</label>
             <textarea name="comment" id="comment-field" placeholder="В свободной форме"></textarea>
           </form>
           <button class="btn" type="button">Отправить</button>
