--- a/catalog.html
+++ b/catalog.html
@@ -146,7 +146,7 @@
           </a>
           <div class="price-box">
             <a href="#">Barbershop</a>
-            <p>Сайт солона кросоты. Для мужчин, да.</p>
+            <p>Сайт салона кросоты. Для мужчин, да.</p>
             <a class="btn" href="#">9 900 руб.</a>
           </div>
         </article>
@@ -210,7 +210,7 @@
             <label for="mail-field">Ваш e-mail:</label>
             <input class="your-name" type="text" name="name" id="name-field" placeholder="Представьтесь, пожалуйста">
             <input class="your-mail" type="text" name="mail" id="mail-field" placeholder="Для отправки ответа">
-            <label for="comment-field">Текст письма</label>
+            <label for="comment-field">Текст письма:</label>
             <textarea name="comment" id="comment-field" placeholder="В свободной форме"></textarea>
           </form>
           <button class="btn" type="button">Отправить</button>
